--- a/doc/specs/urbi-specs.tex
+++ b/doc/specs/urbi-specs.tex
@@ -355,7 +355,7 @@ quotes (\lstinline|'|), as shown in \lst{escape-keyword}.
     \lstinline"while"             & \lstinline|while&| and
                                     \lstinline-while|- flavors              \\
     \lstinline"int"               & Unused                                  &
-    inline"xor"                   & Synonym for \lstinline|^| operator      \\
+    \lstinline"xor"               & Synonym for \lstinline|^| operator      \\
     \lstinline"internal"          & Deprecated                              &
     \lstinline"xor_eq"            & Synonym \lstinline|^=| operator         \\
     \hline
